# task

./: .gitignore  pyproject.toml
task/: settings.py  urls.py
taskapp/: forms.py  models.py  views.py
taskapp/migrations/: 0001_initial.py
taskapp/templates/: common.html
taskapp/templates/pages/: checklist_create.html  checklist_delete.html  checklist_update.html  index.html  task_create.html  task_delete.html  task_detail.html  task_list.html  task_previous_list.html
taskapp/templatetags/: pagination_tags.py
